# picom18

./: CMakeLists.txt  Dockerfile  client.cpp  server.cpp
deploy/: README.md  grafana_dashboard.json  kubeadm.yaml  picom-client.yaml  picom-server.yaml
deploy/dashboards/: Picom - Scenario 1-1524217801878.json  Picom - Scenario 1-1524499777500.json  Picom - Scenario 2-1524219422702.json  Picom - Scenario 2-1524483485132.json
deploy/heapster/: grafana.yaml  grafana_dashboard.json
deploy/network/: weave.yaml
deploy/prometheus/: custom-metrics.yaml  prometheus-instance.yaml
deploy/rabbitmq/: rabbitmq.yaml
deploy/scenarios/1/: picom-client.yaml  picom-server.yaml
deploy/scenarios/2/: picom-client.yaml  picom-server.yaml
results/1/: cpu_usage.csv  replicas.csv  replicas_vs_metric.csv  rpc_status.csv
results/2/: cpu_usage.csv  replicas.csv  rpc_status.csv
results/2/cpu55/: cpu_usage.csv  replicas.csv  rpc_status.csv  rps.csv
results/2/cpu75/: cpu_usage.csv  replicas.csv  rpc_status.csv  rps.csv
results/2/rps27/: cpu_usage.csv  replicas.csv  rpc_status.csv  rps.csv
